# Ahaz

./: .gitignore  Dockerfile  Dockerfile.controller  LICENSE  README.md  ahaz_cicd_api_collection_insomnia.json  cerserver_old.py  docker-compose.yaml  install_kubectl.sh  pyproject.toml  requirements.txt  runguicorn.sh
.github/workflows/: docker.yaml  lint.yaml
ahaz_cli/: pyproject.toml
ahaz_cli/ahaz_cli/: ahaz.py  cli.py  templates.py
ahaz_cli/ahaz_cli/assets/: task.yaml
ahaz_cli/ahaz_cli/assets/hello-world/: Dockerfile
ahaz_cli/ahaz_cli/lib/: docker.py  file.py  task.py
ahaz_common/: pyproject.toml
ahaz_common/ahaz_common/: __init__.py  server.py  task.py
ahaz_controller_page/: app.py  test.py
ahaz_controller_page/templates/: base.html  register.html  teams.html
ahaz_data/kubectl/: config.example.yml  config.yml
ahaz_data/mysqldb/: init.sh
ahaz_devtools/: pyproject.toml
ahaz_devtools/ahaz_devtools/: main.py
ahaz_devtools/ahaz_devtools/assets/: ahaz-service.yml  ahaz-values.yml  kind-config.yml
ahaz_devtools/ahaz_devtools/lib/: config.py  docker.py  kubernetes.py  subprocess.py
ahaz_k8s_controller/: pyproject.toml
ahaz_k8s_controller/k8s_controller/: certmanager.py  cicd_cerserver.py  cicd_config_reader.py  cicd_controller.py  cicd_dboperator.py  controller.py  dboperator.py  events.py  generatecert.py  server.py  service-test.yaml  test.py
charts/deploy-independent/: Chart.yaml  README.md  values.yaml
charts/deploy-independent/scripts/: init.sh
charts/deploy-independent/templates/: _helpers.tpl  deployment.yaml  imagepullsecrets.yaml  kyverno-setup-perms.yaml  namespace.yaml  networkpolicy.yaml  redis.yaml  secret.yaml  serviceaccount.yaml  statefulset.yaml
controller_page/: requirements.txt  test.py
controller_page/templates/: users.html
docs/: README.md
docs/architecture/: index.md
docs/cli/: index.md
docs/controller/: api.md  database.md  index.md  k8s.md  vpn.md
mysqldb/: init.sh
scripts/: cicd_cerserver.py  cicd_controller.py  cicd_dboperator.py  controller.py  dboperator.py  dboperator_backup.py  generatecert.py  requirements3.txt  test.py
test_kube/: config
