[project]
name = "ahaz"
version = "0.0.1"
description = "Monorepo for Ahaz"
readme = "README.md"
authors = [{ name = "auseklitis" }, { name = "towergame" }, { name = "SwanX1"}]
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["ahaz_k8s_controller", "ahaz_common", "ahaz_cli"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "B", "C901", "I"]
typing-modules = ["typing", "typing_extensions", "beartype.typing", "jaxtyping"]
ignore = ["F722"]
task-tags = ["TODO", "FIXME", "XXX", "HACK", "STUPID"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true

[[tool.uv.index]]
name = "mctf2025"
url = "https://git.0x10.lv/api/packages/towergame/pypi"
publish-url = "https://git.0x10.lv/api/packages/towergame/pypi"
explicit = true
authenticate = "always"
