[project]
name = "ahaz_devtools"
version = "0.0.1"
description = "Command-line development tools for Ahaz"
dependencies = []

[tool.uv.sources]
ahaz_common = { workspace = true }

[project.scripts]
create-cluster = "ahaz_devtools.main:init_cluster"
delete-cluster = "ahaz_devtools.main:delete_cluster"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
