[project]
name = "ahaz_k8s_controller"
version = "0.0.1"
description = "Kubernetes controller for Ahaz"

dependencies = [
    "asgiref>=3.10.0",
    "cryptography>=46.0.3",
    "flask>=3.1.2",
    "kubernetes>=34.1.0",
    "mysql-connector-python>=9.5.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "ahaz-common",
    "tenacity>=9.1.2",
]

[tool.uv.sources]
ahaz_common = { workspace = true }
